fix map scroll on mobile

--- a/style.scss
+++ b/style.scss
@@ -168,7 +168,7 @@ aside {
         box-sizing: border-box;
         overflow: hidden;
 
-        z-index: 1;
+        // z-index: 1;
     }
 }
 
